--- a/Public/html/features.html
+++ b/Public/html/features.html
@@ -4,10 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/all.min.css">
+    <link rel="stylesheet" href="../style/style.css">
+
+    <title>Tokyo | ChatApp</title>
 
 <body>
+    <header>
+        <div id="logo">
+            <div id="lCont">
+                <a href="index.html">
+                    <h1 id="logoText"><span id="t">T</span><span id="c">C</span><span id="a">A</span></h1>
+                </a>
+
+            </div>
+            <div id="app-name">
+                <h3> Tokyo ChatApp</h3>
+            </div>
+
+
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <a class="navbar-brand" href="#" id="link">Tokyo ChatApp</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="index.html" id="link">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="features.html" id="link">Features</a>
+                    <a class="nav-item nav-link" href="../index.html" id="link">Guide</a>
+                    <a class="nav-item nav-link" href="../index.html" id="link">Login</a>
+                </div>
+            </div>
+        </nav>
+
+    </header>
     <main>
         <section id="features">
             <div class="cardTitle">
@@ -40,6 +77,22 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; Tokyo 2020</p>
+
+        <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Policy</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
+    <!-- <script src="./Js/userIndex.js"></script> -->
 </body>
 
 </html>
