--- a/Public/html/ChatRoomList.html
+++ b/Public/html/ChatRoomList.html
@@ -22,17 +22,8 @@
 
             </div>
             <div id="app-name">
-                <h3> Tokyo Chat App</h3>
+                <h3> Tokyo ChatApp</h3>
             </div>
-
-            <!-- <div id="contactDetails">
-                <ul>
-                    <li class="cont"><a href="#"><i class="fab fa-facebook"></i> <span>Facebook</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-twitter"></i> <span>Twitter</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
-                </ul>
-            </div> -->
-
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" id="link">Chat Rooms</a>
@@ -42,8 +33,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#" id="link">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#" id="link">Features</a>
+                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;"></a>
                 </div>
             </div>
         </nav>
@@ -88,9 +80,9 @@
 
                     </li>
                     <li>
-                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
+                        <a href="#" class="logoutBtn"><i class="fas fa-sign-out-alt user"></i> <span>Log
+                                Out</span>
                         </a>
-
                     </li>
                 </ul>
             </div>
@@ -108,7 +100,7 @@
 
 
     </main>
-    <div class="modal" tabindex="-1" role="dialog">
+    <div class="modal createRoom" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -145,7 +137,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="closeModal">Cancel</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModal">Cancel</button>
 
                 </div>
             </div>
@@ -157,10 +149,29 @@
         <ul>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Policy</a></li>
-            <li><a href="#">Safety</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+    <div class="modal logout" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Logout Confirmation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are sure you want to logout</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-danger">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -227,7 +238,7 @@
 
         $(".btn-info").click(e => {
             e.preventDefault();
-            $('.modal').modal('show');
+            $('.createRoom').modal('show');
         })
         $("#members").change(function (e) {
             e.preventDefault();
@@ -236,7 +247,7 @@
                 ` <p class="sFriends" value="${$(this).val()}" id="${sId}">
                     ${$(this).val()} <span
                         class="removeFriend">&times;</span></p>`)
-            console.log(sId);
+
             $("#members option:selected").remove();
             $('.removeFriend').unbind().click(function (e) {
                 e.preventDefault()
@@ -244,7 +255,7 @@
                 $(this).parent().remove()
                 $("#members").append(
                     `<option>${text}</option>`)
-                console.log(text)
+
             })
         })
     </script>
