--- a/Public/html/FriendRequest.html
+++ b/Public/html/FriendRequest.html
@@ -22,7 +22,7 @@
 
             </div>
             <div id="app-name">
-                <h3> Tokyo Chat App</h3>
+                <h3> Tokyo ChatApp</h3>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
@@ -33,8 +33,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#" id="link">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#" id="link">Features</a>
+                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;">Features</a>
                 </div>
             </div>
         </nav>
@@ -79,7 +80,8 @@
 
                     </li>
                     <li>
-                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
+                        <a href="#" class="logoutBtn"><i class="fas fa-sign-out-alt user"></i> <span>Log
+                                Out</span>
                         </a>
 
                     </li>
@@ -102,7 +104,7 @@
 
 
         </section>
-        <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal details" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -141,10 +143,29 @@
         <ul>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Policy</a></li>
-            <li><a href="#">Safety</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+    <div class="modal logout" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Logout Confirmation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are sure you want to logout</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-danger">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -154,17 +175,18 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js"></script>
-    <script src="../Js/index.js"></script>
+    <!-- <script src="../Js/index.js"></script> -->
     <script>
+        let userDetails = JSON.parse(localStorage.getItem("userData"));
         $(document).ready(
             function getRequests() {
-                $(".empty").hide()
                 $.ajax({
                         method: "GET",
                         url: `http://localhost:3000/requestsRecieved?userId=${userDetails.id}`
                     })
                     .done(function (res) {
                         if (res.length) {
+
                             res.forEach((element, index) => {
                                 //FILTERS ACCEPTED REQUESTS
                                 $.ajax({
@@ -173,7 +195,7 @@
                                     })
                                     .done(function (result) {
                                         if (result.length <= 0) {
-
+                                            $(".empty").hide()
                                             $("#requestList").append(`<li
                                 class="list-group-item d-flex justify-content-between align-items-center">
                                 <a href="#" class="chats" onclick="showProfile(${element.senderId})">
@@ -186,12 +208,12 @@
                                 <span class="badge" data-toggle="tooltip" data-placement="top" title="Reject" onclick="reject(${element.id})"> <i
                                         class="fas fa-times"></i> </span>
                             </li>`)
-                                        } else {
-                                            $(".empty").show()
                                         }
                                     })
                             });
                             $('[data-toggle="tooltip"]').tooltip()
+                        } else {
+                            $('.empty').show()
                         }
                     })
                 $('[data-toggle="tooltip"]').tooltip()
@@ -200,6 +222,14 @@
 
         )
 
+
+
+        $(".logoutBtn").click(function () {
+            $(".logout").modal("show");
+        });
+        $(".btn-danger").click(function () {
+            $("#index")[0].click();
+        });
 
         function accept(id, firstnam, lastname, age, state, city) {
             friendData = {
@@ -234,7 +264,7 @@
                     $("#pAge").text(`Age: ${data.age}`)
                     $("#pStatus").text(`Status: ${data.description}`)
                     $("#pGender").text(`Gender: ${data.gender}`)
-                    $(".modal").modal('show')
+                    $(".details").modal('show')
                 }
             })
         }
