--- a/Public/html/addFriends.html
+++ b/Public/html/addFriends.html
@@ -22,7 +22,7 @@
 
             </div>
             <div id="app-name">
-                <h3> Tokyo Chat App</h3>
+                <h3> Tokyo ChatApp</h3>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
@@ -33,8 +33,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link " href="#" id="link">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#" id="link">Features</a>
+                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;">Features</a>
 
                 </div>
             </div>
@@ -80,9 +81,9 @@
 
                     </li>
                     <li>
-                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
+                        <a href="#" class="logoutBtn"><i class="fas fa-sign-out-alt user"></i> <span>Log
+                                Out</span>
                         </a>
-
                     </li>
                 </ul>
             </div>
@@ -97,7 +98,7 @@
 
 
         </section>
-        <div class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal fade details" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -136,10 +137,29 @@
         <ul>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Policy</a></li>
-            <li><a href="#">Safety</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+    <div class="modal logout" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Logout Confirmation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are sure you want to logout</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-danger">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -189,7 +209,6 @@
 
                                         //FILTERS THE USER ITSELF
                                     } else if (userDetails.id !== element.id) {
-                                        console.log(element.id)
 
                                         $("#friendList").append(`<li class="list-group-item d-flex justify-content-between align-items-center user-${element.id}">
      <a href="#" class="chats" onclick="showProfile(${element.id})" data-toggle="tooltip" data-placement="top"
@@ -214,7 +233,7 @@
                                                 if (res.length) {
                                                     // console.log(res)
                                                     res.forEach(d => {
-                                                        console.log(d.senderId)
+
                                                         $(`.user-${d.senderId}`)
                                                             .remove()
                                                     })
@@ -280,14 +299,14 @@
                     $("#pAge").text(`Age: ${data.age}`)
                     $("#pStatus").text(`Status: ${data.description}`)
                     $("#pGender").text(`Gender: ${data.gender}`)
-                    $(".modal").modal('show')
+                    $(".details").modal('show')
                 }
             })
         }
 
         $(".close").click((e) => {
             e.preventDefault();
-            $(".modal").hide()
+            $(".details").hide()
         })
         $("#closeModal").click((e) => {
             e.preventDefault();
@@ -308,6 +327,14 @@
                 $("#newSide").css("width", "0");
             }
         };
+
+
+        $(".logoutBtn").click(function () {
+            $(".logout").modal("show");
+        });
+        $(".btn-danger").click(function () {
+            $("#index")[0].click();
+        });
     </script>
 </body>
 
