--- a/Public/html/friends.html
+++ b/Public/html/friends.html
@@ -22,7 +22,7 @@
 
             </div>
             <div id="app-name">
-                <h3> Tokyo Chat App</h3>
+                <h3> Tokyo ChatApp</h3>
             </div>
 
         </div>
@@ -34,8 +34,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#" id="link">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#" id="link">Features</a>
+                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;"></a>
                 </div>
             </div>
         </nav>
@@ -80,7 +81,8 @@
 
                     </li>
                     <li>
-                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
+                        <a href="#" class="logoutBtn"><i class="fas fa-sign-out-alt user"></i> <span>Log
+                                Out</span>
                         </a>
 
                     </li>
@@ -102,7 +104,7 @@
 
 
         </section>
-        <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal details" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -142,10 +144,29 @@
         <ul>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Policy</a></li>
-            <li><a href="#">Safety</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+    <div class="modal logout" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Logout Confirmation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are sure you want to logout</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-danger">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -167,20 +188,6 @@
             $("#fR-link")[0].click();
         })
 
-        function showProfile(id) {
-            $.ajax({
-                method: 'GET',
-                url: 'http://localhost:3000/users/' + id,
-                success: function (data) {
-                    $("#pName").text(`Name: ${data.firstname} ${data.lastname}`);
-                    $("#pLoc").text(`Location: ${data.state}, ${data.city}`);
-                    $("#pAge").text(`Age: ${data.age}`)
-                    $("#pStatus").text(`Status: ${data.description}`)
-                    $("#pGender").text(`Gender: ${data.gender}`)
-                    $(".modal").modal('show')
-                }
-            })
-        }
 
         function sendChatData(data) {
             $.ajax({
@@ -235,6 +242,7 @@
             e.preventDefault();
             $(".close").click()
         })
+
 
 
 
