--- a/public/html/features.html
+++ b/public/html/features.html
@@ -35,9 +35,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="index.html" id="link">Home <span
+                    <a class="nav-item nav-link" href="../index.html" id="link">Home <span
                             class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="features.html" id="link">Features</a>
+                    <a class="nav-item nav-link active" href="features.html" id="link">Features</a>
                     <a class="nav-item nav-link" href="../index.html" id="link">Guide</a>
                     <a class="nav-item nav-link" href="../index.html" id="link">Login</a>
                 </div>
@@ -50,15 +50,23 @@
             <div class="cardTitle">
                 <h3>FEATURES</h3>
             </div>
-            <div>
+            <div class="featureCard">
                 <div class="icon">
-                    <i class="fas fa-users home"></i>
+                    <i class="fas fa-user-friends home"></i>
                 </div>
-                <h4>Free Chat Rooms, Chat Online With Rriends </h4>
+                <h4>Chat Online With Friends </h4>
                 <p>This web site is an online free chat rooms. With us you can meet new friends from all over the world.
                     No download, no setup & no registration needed.</p>
             </div>
-            <div>
+            <div class="featureCard">
+                <div class="icon">
+                    <i class="fas fa-users home"></i>
+                </div>
+                <h4>Free Chat Rooms</h4>
+                <p>This web site is an online free chat rooms. With us you can meet new friends from all over the world.
+                    No download, no setup & no registration needed.</p>
+            </div>
+            <div class="featureCard">
                 <div class="icon">
                     <i class="fas fa-user-friends home"></i>
                 </div>
@@ -66,7 +74,7 @@
                 <p>Meet new single women and men everyday without limits, make friendships, for free you can have a live
                     discussion</p>
             </div>
-            <div>
+            <div class="featureCard">
                 <div class="icon">
                     <i class="fas fa-mobile-alt home"></i>
                 </div>
